# src/controllers/CartController.ts
@@ -1,8 +1,8 @@
 import { Request, Response } from 'express';
 import { CartProduct } from '../entity/CartProduct';
 import { BaseEntity, getRepository } from 'typeorm';
-import { User } from '../entity/User';
 import jwt from 'jsonwebtoken';
+import { Product } from '../entity/Product';
 
 
 class CartController extends BaseEntity {
@@ -11,15 +11,21 @@ class CartController extends BaseEntity {
         if(!token) {
             return res.status(401).send('U need authorization')
         }
-        return Object(jwt.verify(token, 'secret')).id
+        return Object(jwt.verify(token, 'secret')).id?.toString()
     }
     
     static addProduct = async (req: Request, res: Response) => {
         let userId = this.getUserId(req, res);
-        const {productId} = req.body
+        const {productId, number} = req.body
+
+        let product = await getRepository(Product).findOne({productId: productId});
+        if(!product) {
+            return res.status(404).send('Product not found with this ID!')
+        }
 
         const newItem = {
             productId: productId,
+            number: number,
             addedBy: userId
         }
 
@@ -29,27 +35,80 @@ class CartController extends BaseEntity {
     }
 
     static getProducts = async (req: Request, res: Response) => {
-        let id = req.query.userId;
+        let id = this.getUserId(req, res)
         if(id) {
-            id = id.toString();
             const result = await getRepository(CartProduct)
                                 .createQueryBuilder('p')
-                                .where('p.user_id = : id', {id})
+                                .where(`p.added_by = ${id}`)
                                 .orderBy('p.added_at', 'ASC')
                                 .getMany();
-            return res.status(200).json(result);
+            let arr: any = result;                    
+            let allProducts = await getRepository(Product).createQueryBuilder('p').getMany()                   
+            await Array.from(arr)?.forEach((product: any) => {
+                let productObj = Array.from(allProducts).find(p => p.productId == product.productId)
+                Object.assign(product, {productData: productObj})
+            })
+
+            return res.status(200).json(arr)
         } else {
-            const result = await getRepository(CartProduct).createQueryBuilder("p").getMany();
-            return res.status(200).json(result);
+            return res.status(200).send('U need authorization')
         }
     }
 
-    static removeProduct = async (req: Request, res: Response) => {
-
+    static getOneProduct = async (req: Request, res: Response) => {
+        const id = Number(req.params.id);
+        if(id) {
+            try {
+                let cartProduct = await getRepository(CartProduct).findOneOrFail(id);
+                let productId = cartProduct?.productId;
+                let product = await getRepository(Product).findOne({productId: productId});
+                cartProduct = Object.assign(cartProduct, {productData: product})
+                res.status(200).json(cartProduct)
+            } catch (error) {
+                res.status(404).send('Cart product not found with this Id')
+            }
+        } else {
+            res.status(400).send('Bad request: cart product Id is missing!');
+        }
     }
 
-    static editProduct = async (req: Request, res: Response) => {
+    static removeProduct = async (req: any, res: any) => {
+        const id = req.params.id;
+        if(id) {
+            try {
+                await getRepository(CartProduct).delete(id);
+                return res.status(200).send('Cart product has been deleted');
+            } catch (error) {
+                return res.status(404).send('Cart product not found with this Id');
+            }
+        } else {
+            res.status(400).send('Bad request: cart product Id is missing!');
+        }
+    }
 
+    static editProduct = async (req: any, res: any) => {
+        const id = Number(req.params.id);
+        if(id) {
+            try {
+                const {productId, number} = req.body;
+                let cartProduct = await getRepository(CartProduct).findOneOrFail(id);
+                if(cartProduct) {
+                    let updated = {
+                        productId: productId ? productId : cartProduct.productId,
+                        number: number ? number : cartProduct.number
+                    }
+                    await getRepository(CartProduct).update({id: id}, updated);
+
+                    let product = await getRepository(Product).findOne({productId: updated?.productId});
+                    let updatedValues = Object.assign(updated, {productData: product});
+                    return res.status(200).json(updatedValues);
+                }
+            } catch (error) {
+                return res.status(404).send('Cart product not found with this Id');
+            }
+        } else {
+            res.status(400).send('Bad request: cart product Id is missing!');
+        }
     }
 }
 
